Replace calls to Thread.getId() with Thread.threadId()